Fix progress bar position on mobile

--- a/src/app/components/ProgressBar.scss
+++ b/src/app/components/ProgressBar.scss
@@ -6,7 +6,7 @@
 }
 
 @media only screen and (max-width: 600px) {
-  #app .progress {
+  #app .progress.progress-loader {
     top: 56px;
   }
 }
